--- a/src/utils/views/products.hbs
+++ b/src/utils/views/products.hbs
@@ -1,11 +1,11 @@
-<html lang='ro'>
+<html lang='Ro'>
   <head>
     <meta charset='UTF-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <title>PC Junkyard</title>
     <link rel='stylesheet' href='/css/build.css' />
     <link rel='icon' href='/img/computer.png' />
-    <title>PC Junkyard</title>
   </head>
   <body class="bg-black">
     <div>
@@ -15,8 +15,9 @@
         <div>
           <img src='/img/banner.png' class='rounded-b-lg' alt='' />
         </div>
-          {{>highlights}}
+          {{>filters}}
       </div>
     </div>
   </body>
+  <script src='/js/filter.js'></script>
 </html>
