4# - Multiple views added, routers.

--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -19,13 +19,22 @@
   </div>
   <div class='flex flex-col m-6 text-indigo-700'>
     <div class="ml-auto flex items-center">
+      {{#unless loggedIn}}
       <div class="hidden lg:flex lg:flex-1 lg:items-center lg:justify-end lg:space-x-6">
         <a href="/users/login" class="text-sm font-medium text-gray-700 hover:text-gray-800">Logheaza-te</a>
         <span class="h-6 w-px bg-gray-200" aria-hidden="true"></span>
         <a href="/users/create" class="text-sm font-medium text-gray-700 hover:text-gray-800">Creaza-ti un cont</a>
       </div>
+      {{/unless}}
+      {{#if loggedIn}}
+      <div class="hidden lg:flex lg:flex-1 lg:items-center lg:justify-end lg:space-x-6">
+        {{#if admin}}<a href="/add/item" class="text-sm font-medium text-gray-700 hover:text-gray-800">Add item</a>{{/if}}
+        <span class="h-6 w-px bg-gray-200" aria-hidden="true"></span>
+        <a href="/users/logout" class="text-sm font-medium text-gray-700 hover:text-gray-800">Delogheaza-te</a>
+      </div>
+      {{/if}}
     <div class='ml-4 flow-root lg:ml-6'>
-      <a href='#' class='group -m-2 p-2 flex items-center'>
+      <a href='/users/checkout' class='group -m-2 p-2 flex items-center'>
         <!-- Heroicon name: outline/shopping-bag -->
         <svg
           class='flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-gray-500'
@@ -44,7 +53,7 @@
         </svg>
         <span
           class='ml-2 text-sm font-medium text-gray-700 group-hover:text-gray-800'
-        >0</span>
+        >{{basketItems}}</span>
         <span class='sr-only'>items in cart, view bag</span>
       </a>
     </div>
