--- a/src/utils/views/homepage.hbs
+++ b/src/utils/views/homepage.hbs
@@ -9,7 +9,7 @@
   </head>
   <body class="bg-black">
     <div>
-      {{>header}}
+      {{>header this}}
       {{>navigationbar}}
       <div class='flex flex-col h-full'>
         <div>
