6# - Finished add page, fixes.

--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -28,7 +28,7 @@
       {{/unless}}
       {{#if loggedIn}}
       <div class="hidden lg:flex lg:flex-1 lg:items-center lg:justify-end lg:space-x-6">
-        {{#if admin}}<a href="/add/item" class="text-sm font-medium text-gray-700 hover:text-gray-800">Add item</a>{{/if}}
+        {{#if admin}}<a href="/add/item" class="text-sm font-medium text-gray-700 hover:text-gray-800">Adauga produs</a>{{/if}}
         <span class="h-6 w-px bg-gray-200" aria-hidden="true"></span>
         <a href="/users/logout" class="text-sm font-medium text-gray-700 hover:text-gray-800">Delogheaza-te</a>
       </div>
