--- a/src/utils/views/addProduct.hbs
+++ b/src/utils/views/addProduct.hbs
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@editorjs/quote@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/@editorjs/delimiter@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/@editorjs/list@latest"></script>
-    <title>Add - PC Junkyard</title>
+    <title>Add - PC Components</title>
   </head>
   <body class="bg-black">
     {{>header this}}
@@ -22,18 +22,16 @@
     <div class="bg-white rounded-lg m-6">
       <div class="pt-6">
         <!-- Image gallery -->
-        <div class="ring-2 mt-6 max-w-2xl mx-auto sm:px-6 lg:max-w-7xl lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8" id="image">
+        <div class="ring-2 mt-6 max-w-4xl mx-auto w-full" id="image">
           
         </div>
 
         <!-- Product info -->
         <div class="ring-2 max-w-2xl mx-auto pt-10 pb-16 px-4 sm:px-6 lg:max-w-7xl lg:pt-16 lg:pb-24 lg:px-8 lg:grid lg:grid-cols-3 lg:grid-rows-[auto,auto,1fr] lg:gap-x-8">
           <div class="lg:col-span-2 lg:border-r lg:border-gray-200 lg:pr-8">
-            <h1 class="text-2xl font-bold tracking-tight text-gray-900 sm:text-3xl">
-               <label for="productName" class="block">Nume produs</label>
-                  <input required type="text" name="productName" id="productName"
-                  class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" />
-            </h1>
+            <label for="productName" class="block"></label>
+              <input required type="text" name="productName" id="productName" placeholder="Nume produs"
+              class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" />
           </div>
 
           <!-- Pret -->
@@ -42,116 +40,29 @@
               <input required type="number" name="productPrice" id="productPrice"
               class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" />
 
-            <form class="mt-10">
+            <div class="mt-10">
               <!-- Stock -->
               <div>
-                <label for="productQuant" class="block">Stock total</label>
+                <label for="productQuant" class="block">Stoc total</label>
                   <input required type="text" name="productQuant" id="productQuant"
                   class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" />
               </div>
 
-              <button type="submit" class="mt-10 w-full bg-indigo-600 border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Salveaza produsul</button>
-            
-              <div class='pt-6 overflow-auto h-40' id='filter-section-0'>
-                <div class='space-y-4 '>
-                  <div class='flex items-center'>
-                    <input
-                      id='filter-color-0'
-                      name='color[]'
-                      value='white'
-                      type='checkbox'
-                      class='h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500'
-                    />
-                    <label
-                      for='filter-color-0'
-                      class='ml-3 text-sm text-gray-600'
-                    >
-                      Asus
-                    </label>
-                  </div>
+              {{>manufacturerFilter}}
 
-                  <div class='flex items-center'>
-                    <input
-                      id='filter-color-1'
-                      name='color[]'
-                      value='beige'
-                      type='checkbox'
-                      class='h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500'
-                    />
-                    <label
-                      for='filter-color-1'
-                      class='ml-3 text-sm text-gray-600'
-                    >
-                      Gigabyte
-                    </label>
-                  </div>
+                <input
+                  type='text'
+                  id='addModel'
+                  class='mb-1 mt-1 focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md'
+                />
+                <button
+                  class='bg-gray-400 px-2 py-1 border border-transparent rounded-md flex items-center justify-center text-base font-medium text-white hover:bg-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500'
+                  id='addModelButton'
+                >Adauga model</button>
 
-                  <div class='flex items-center'>
-                    <input
-                      id='filter-color-2'
-                      name='color[]'
-                      value='blue'
-                      type='checkbox'
-                      class='h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500'
-                    />
-                    <label
-                      for='filter-color-2'
-                      class='ml-3 text-sm text-gray-600'
-                    >
-                      MSI
-                    </label>
-                  </div>
-
-                  <div class='flex items-center'>
-                    <input
-                      id='filter-color-3'
-                      name='color[]'
-                      value='brown'
-                      type='checkbox'
-                      class='h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500'
-                    />
-                    <label
-                      for='filter-color-3'
-                      class='ml-3 text-sm text-gray-600'
-                    >
-                      Acer
-                    </label>
-                  </div>
-
-                  <div class='flex items-center'>
-                    <input
-                      id='filter-color-4'
-                      name='color[]'
-                      value='green'
-                      type='checkbox'
-                      class='h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500'
-                    />
-                    <label
-                      for='filter-color-4'
-                      class='ml-3 text-sm text-gray-600'
-                    >
-                      Dell
-                    </label>
-                  </div>
-
-                  <div class='flex items-center'>
-                    <input
-                      id='filter-color-5'
-                      name='color[]'
-                      value='purple'
-                      type='checkbox'
-                      class='h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500'
-                    />
-                    <label
-                      for='filter-color-5'
-                      class='ml-3 text-sm text-gray-600'
-                    >
-                      Lenovo
-                    </label>
-                  </div>
-                </div>
-              </div>
-            </form>
+              <button class="mt-10 w-full bg-indigo-600 border border-transparent rounded-md py-3 px-8 flex items-center justify-center text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+              id="saveProductButton">Salveaza produsul</button>
+            </div>
           </div>
 
           <div class="border py-10 lg:pt-6 lg:pb-16 lg:col-start-1 lg:col-span-2 lg:border-r lg:border-gray-200 lg:pr-8">
