8# - Finish product page, added helper functions.

--- a/src/templates/partials/manufacturerFilter.hbs
+++ b/src/templates/partials/manufacturerFilter.hbs
@@ -20,7 +20,7 @@
       <input
         id='filter-manufacturer-1'
         name='manufacturer[]'
-        value='AS'
+        value='AK'
         type='checkbox'
         class='h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500'
         onclick='onlyOneManChecked(this)'
@@ -536,7 +536,7 @@
         onclick='onlyOneCatChecked(this)'
       />
       <label for='filter-category-0' class='ml-3 text-sm text-gray-600'>
-        GPU
+        Placi Video
       </label>
     </div>
 
@@ -550,7 +550,7 @@
         onclick='onlyOneCatChecked(this)'
       />
       <label for='filter-category-1' class='ml-3 text-sm text-gray-600'>
-        CPU
+        Procesoare
       </label>
     </div>
 
